# ty-signin

./: .dockerignore  .env.example  .gitignore  .goreleaser.yaml  Dockerfile  README.md  config.py  env.py  main.py  pyproject.toml  ql_signin.py  ql_ty_signin.py  ql_ty_signin_login.py  requirements.txt  scheduler.py  test_main.py
.github/workflows/: release.yml
docker/: docker-compose.yml
tests/: test_regression.py
